--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^5.0.7"
+    "express": "^4.15.2",
+    "mongoose": "^5.0.7",
+    "socket.io": "^2.0.4"
   }
 }
